<resources>
    <string name="app_name">HomePi</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="door">Door</string>
    <string name="lock">lock</string>
    <string name="lights">Lights</string>
    <string name="switch_lights">Switch Lights</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="avatar">Avatar</string>
    <string name="copy_right">HomePi 2022 version afc4984</string>
    <string name="connectionError">Connection error! Please try again later!</string>
    <string name="notReachableServer">Server is not reachable. Connection error!</string>
    <string name="authenticationFailed">Authentication failed!</string>
    <string name="sureConnectionError">Please make sure youre connected to the network!</string>
    <string name="sureInstalledSmartHome">Connection error! Make sure HomePi API service running on the server.</string>
    <string name="refresh">refresh</string>
    <string name="login_pattern">login_pattern</string>
    <string name="version">afc4984</string>
    <string name="logo">logo</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enter_server_address">Enter the server address</string>
    <string name="a_new_server">Add a new server</string>
    <string name="address">Address</string>
    <string name="server_address">Server address</string>
    <string name="server_name">Server name</string>
    <string name="select_an_account_to_login">Please choose an account to login</string>
    <string name="add_a_new_account">Add a new Account</string>
    <string name="http">http://</string>
    <string name="https">https://</string>
    <string name="server">Server</string>
    <string name="enter_your_login_info">Enter your server address below to continute</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logs">Logs</string>
    <string name="profile">Profile</string>
    <string name="fullname">fullname</string>
    <string name="user_serveraddress">user@serveraddress</string>
    <string name="weekly_chart_description">You can see your weekly requests in below chart.</string>
    <string name="weekly_requests">Weekly requests</string>
    <string name="accessories">Accessories</string>
    <string name="person_photo">person_photo</string>
    <string name="accessory_name">Accessory Name</string>
    <string name="accessory_description">Accessory Description</string>
    <string name="icon">Icon</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_your_username_and_password_to_login">Enter your username and password to login!</string>
    <string name="edit">edit</string>
    <string name="accessories_text">You can see your accessories here.</string>
    <string name="logs_text">You can see your logs here.</string>
    <string name="language">Language</string>
    <string name="item">Item</string>
    <string name="choose_lang">Please choose a language</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="accounts">Accounts</string>
    <string name="event">Event</string>
    <string name="device">Device</string>
    <string name="created_at">Created At</string>
    <string name="testevent">TestEvent</string>
    <string name="appearance_header">Appearance</string>
    <string name="light_mode">Light Mode</string>
    <string name="sure_note_run_accessory">Are you sure you want to run this accessory?</string>
    <string name="yes">Yes</string>
    <string name="yeah">Yeah</string>
    <string name="no">No</string>
</resources>
