<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    tools:context=".activities.LaunchActivity">

    <RelativeLayout
        android:id="@+id/logoSplash"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/smartHomeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/refreshBtn"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_alignTop="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/refresh"
        android:src="@drawable/ic_refresh"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/smartHomeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoSplash"
        app:layout_constraintVertical_bias="0.723" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinner"
        style="@style/SpinKitView.Pulse"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toTopOf="@+id/smartHomeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoSplash"
        app:layout_constraintVertical_bias="0.727" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/smartHomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/copy_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:textColor="?attr/textColor"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accounts_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_shape_circle"
        android:text="@string/accounts"
        android:textColor="?attr/textColor"
        android:textAllCaps="false"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/smartHomeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>